--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon app.js",
+    "build": "netlify deploy --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +15,9 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.3"
+    "netlify-cli": "^17.27.0",
+    "netlify-lambda": "^2.0.16",
+    "nodemon": "^3.1.3",
+    "serverless-http": "^3.2.0"
   }
 }
