--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "netlify-cli": "^17.27.0",
-    "netlify-lambda": "^2.0.16",
-    "nodemon": "^3.1.3",
-    "serverless-http": "^3.2.0"
+    "nodemon": "^3.1.3"
   }
 }
